v.1.2
	Adding languages: European Portuguese, Indonesian.
	BUG fix - unset_jquery function now works properly.
	Adding date format to the auto date fields. The format can be dd/mm/yyyy or mm/dd/yyyy or the old-one yyyy-mm-dd.
	Adding a new uploader. Works with the most common browsers. Internet Explorer 8+, Mozilla Firefox, Google Chrome, Opera, Safari.
v.1.1.8
	Add new jquery version 1.7.1
	Changing the drop-down list of the set_relation. Now the drop-down list has unique design for all the browsers, is searchable and also can be empty.
	Changing the layout or relation n-n (only without the ordering field). The new one, is much more user friendly and easier to handle lot of data. 
	Adding languages: Italian, Russian.
	Small BUG fixes: 
		- Auto-recognize enum fields for CI 2.1
		- Don't print "&nbsp;" if a value is empty, is useless
		- Smal but important CSS Fixes.
		- #7 set_relation BUG conflict when a field name appears twice.
	Manipulating NULL data. Automatically add NULL to a NULL-able field when it's empty.
v.1.1.7
	Multilingual functionality, adding languages: Bulgarian, French, Portuguese, Spanish,  Thai.
	Fixing issue #3, replace mysql_escape_string() with str_replace. This function has been DEPRECATED as of PHP 5.3.0.
	Fixing issue #5, set_relation with multiple fields don't work with NULL-able fields.
	Fixing issue #6, unique_hash issue (not unique when having same method name in 2 diff. controllers).
	Changing license. Grocery CRUD is released with dual licensing, using the GPL v3 (license-gpl3.txt) and the MIT license (license-mit.txt).
v.1.1.6
	New feature: Multilingual functionality.
	Remember the search text and the field name at the list that user had insert.
	Method set_relation - New feature to add more than one fields to the title of the related table.
	Adding Timestamp as an automatic date and time field.
	Change the business logic of adding js and css files. This is really useful for a FUTURE feature with multiple tables in the same view.